# eis-fit

./: .gitignore  README.md  pyproject.toml
data/: EA-2.txt  EP-2.txt  PP-2.txt
src/eis_fit/: config.py  config_runtime.py  data.py  model.py  trainer.py  utils.py
src/eis_fit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
